--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,7 @@
 env=QA
 browser=chrome
-google_url=https://www.google.com/
+amazon_url=https://www.amazon.com/
+aranacakKelime = fairy
 
 #DB Credentials
 DB_USERNAME=karl
